src/net/domesdaybook/expression/parser/regularExpressionParser.java
package net.domesdaybook.expression.parser;

// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g 2010-12-06 21:57:06

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class regularExpressionParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SEQUENCE", "ALTERNATE", "REPEAT", "SET", "INVERTED_SET", "RANGE", "BITMASK", "CASE_SENSITIVE", "CASE_INSENSITIVE", "ANY", "ALT", "BYTE", "FULL_STOP", "OPEN_SQUARE", "CARET", "CLOSE_SQUARE", "RANGE_SEPARATOR", "CASE_SENSITIVE_STRING", "AMPERSAND", "SET_ASCII", "SET_PRINT", "SET_GRAPH", "SET_WORD", "SET_ALPHANUM", "SET_ALPHA", "SET_UPPER", "SET_LOWER", "SET_PUNCT", "SET_HEXDIGIT", "SET_DIGIT", "SET_WHITESPACE", "SET_BLANK", "SET_SPACE", "SET_TAB", "SET_NEWLINE", "SET_RETURN", "SET_CONTROL", "TAB_SHORTHAND", "NEWLINE_SHORTHAND", "VERTICAL_TAB_SHORTHAND", "FORM_FEED_SHORTHAND", "RETURN_SHORTHAND", "ESCAPE_SHORTHAND", "DIGIT_SHORTHAND", "NOT_DIGIT_SHORTHAND", "WORD_SHORTHAND", "NOT_WORD_SHORTHAND", "WHITE_SPACE_SHORTHAND", "NOT_WHITE_SPACE_SHORTHAND", "CASE_INSENSITIVE_STRING", "OPEN", "CLOSE", "OPEN_CURLY", "NUMBER", "REPEAT_SEPARATOR", "MANY", "CLOSE_CURLY", "QUESTION_MARK", "PLUS", "QUOTE", "BACK_TICK", "ESCAPE", "HEX_DIGIT", "COMMENT", "WS"
    };
    public static final int CLOSE_CURLY=60;
    public static final int SET_NEWLINE=38;
    public static final int SET_LOWER=30;
    public static final int SET_GRAPH=25;
    public static final int SET_ASCII=23;
    public static final int BITMASK=10;
    public static final int TAB_SHORTHAND=41;
    public static final int DIGIT_SHORTHAND=47;
    public static final int CASE_SENSITIVE_STRING=21;
    public static final int CASE_INSENSITIVE=12;
    public static final int SET_PUNCT=31;
    public static final int EOF=-1;
    public static final int SET_DIGIT=33;
    public static final int RANGE_SEPARATOR=20;
    public static final int NEWLINE_SHORTHAND=42;
    public static final int QUOTE=63;
    public static final int ALT=14;
    public static final int SET_ALPHANUM=27;
    public static final int ESCAPE=65;
    public static final int ESCAPE_SHORTHAND=46;
    public static final int SET_WHITESPACE=34;
    public static final int SET_RETURN=39;
    public static final int CARET=18;
    public static final int QUESTION_MARK=61;
    public static final int OPEN_SQUARE=17;
    public static final int BACK_TICK=64;
    public static final int PLUS=62;
    public static final int RETURN_SHORTHAND=45;
    public static final int SET_UPPER=29;
    public static final int SET_TAB=37;
    public static final int SET_BLANK=35;
    public static final int COMMENT=67;
    public static final int REPEAT_SEPARATOR=58;
    public static final int CLOSE_SQUARE=19;
    public static final int FORM_FEED_SHORTHAND=44;
    public static final int BYTE=15;
    public static final int FULL_STOP=16;
    public static final int VERTICAL_TAB_SHORTHAND=43;
    public static final int INVERTED_SET=8;
    public static final int NUMBER=57;
    public static final int AMPERSAND=22;
    public static final int HEX_DIGIT=66;
    public static final int CASE_SENSITIVE=11;
    public static final int RANGE=9;
    public static final int SET=7;
    public static final int OPEN_CURLY=56;
    public static final int SET_SPACE=36;
    public static final int SET_HEXDIGIT=32;
    public static final int MANY=59;
    public static final int SET_CONTROL=40;
    public static final int ALTERNATE=5;
    public static final int OPEN=54;
    public static final int SEQUENCE=4;
    public static final int SET_WORD=26;
    public static final int WS=68;
    public static final int ANY=13;
    public static final int CLOSE=55;
    public static final int CASE_INSENSITIVE_STRING=53;
    public static final int NOT_WORD_SHORTHAND=50;
    public static final int NOT_WHITE_SPACE_SHORTHAND=52;
    public static final int WORD_SHORTHAND=49;
    public static final int SET_ALPHA=28;
    public static final int REPEAT=6;
    public static final int SET_PRINT=24;
    public static final int WHITE_SPACE_SHORTHAND=51;
    public static final int NOT_DIGIT_SHORTHAND=48;

    // delegates
    // delegators


        public regularExpressionParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public regularExpressionParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return regularExpressionParser.tokenNames; }
    public String getGrammarFileName() { return "/home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g"; }


    	boolean sequencesAsTree = false;


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "start"
    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:58:1: start : regex EOF ;
    public final regularExpressionParser.start_return start() throws RecognitionException {
        regularExpressionParser.start_return retval = new regularExpressionParser.start_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF2=null;
        regularExpressionParser.regex_return regex1 = null;


        Object EOF2_tree=null;

        try {
            // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:58:7: ( regex EOF )
            // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:58:9: regex EOF
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_regex_in_start147);
            regex1=regex();

            state._fsp--;

            adaptor.addChild(root_0, regex1.getTree());
            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_start149); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "start"

    public static class regex_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "regex"
    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:62:1: regex : sequence ( ( ( ALT sequence )+ -> ^( ALT ( sequence )+ ) ) | ( -> sequence ) ) ;
    public final regularExpressionParser.regex_return regex() throws RecognitionException {
        regularExpressionParser.regex_return retval = new regularExpressionParser.regex_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ALT4=null;
        regularExpressionParser.sequence_return sequence3 = null;

        regularExpressionParser.sequence_return sequence5 = null;


        Object ALT4_tree=null;
        RewriteRuleTokenStream stream_ALT=new RewriteRuleTokenStream(adaptor,"token ALT");
        RewriteRuleSubtreeStream stream_sequence=new RewriteRuleSubtreeStream(adaptor,"rule sequence");
        try {
            // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:62:7: ( sequence ( ( ( ALT sequence )+ -> ^( ALT ( sequence )+ ) ) | ( -> sequence ) ) )
            // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:63:3: sequence ( ( ( ALT sequence )+ -> ^( ALT ( sequence )+ ) ) | ( -> sequence ) )
            {
            pushFollow(FOLLOW_sequence_in_regex168);
            sequence3=sequence();

            state._fsp--;

            stream_sequence.add(sequence3.getTree());
            // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:64:3: ( ( ( ALT sequence )+ -> ^( ALT ( sequence )+ ) ) | ( -> sequence ) )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ALT) ) {
                alt2=1;
            }
            else if ( (LA2_0==EOF||LA2_0==CLOSE) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:65:4: ( ( ALT sequence )+ -> ^( ALT ( sequence )+ ) )
                    {
                    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:65:4: ( ( ALT sequence )+ -> ^( ALT ( sequence )+ ) )
                    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:65:6: ( ALT sequence )+
                    {
                    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:65:6: ( ALT sequence )+
                    int cnt1=0;
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==ALT) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:65:7: ALT sequence
                    	    {
                    	    ALT4=(Token)match(input,ALT,FOLLOW_ALT_in_regex182);  
                    	    stream_ALT.add(ALT4);

                    	    pushFollow(FOLLOW_sequence_in_regex184);
                    	    sequence5=sequence();

                    	    state._fsp--;

                    	    stream_sequence.add(sequence5.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt1 >= 1 ) break loop1;
                                EarlyExitException eee =
                                    new EarlyExitException(1, input);
                                throw eee;
                        }
                        cnt1++;
                    } while (true);



                    // AST REWRITE
                    // elements: ALT, sequence
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 65:22: -> ^( ALT ( sequence )+ )
                    {
                        // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:65:25: ^( ALT ( sequence )+ )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_ALT.nextNode(), root_1);

                        if ( !(stream_sequence.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_sequence.hasNext() ) {
                            adaptor.addChild(root_1, stream_sequence.nextTree());

                        }
                        stream_sequence.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }


                    }
                    break;
                case 2 :
                    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:67:4: ( -> sequence )
                    {
                    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:67:4: ( -> sequence )
                    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:67:9: 
                    {

                    // AST REWRITE
                    // elements: sequence
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 67:9: -> sequence
                    {
                        adaptor.addChild(root_0, stream_sequence.nextTree());

                    }

                    retval.tree = root_0;
                    }


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "regex"

    public static class sequence_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sequence"
    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:74:1: sequence : ({...}? => ( ( quantified_atom -> quantified_atom ) ( sequence -> ^( SEQUENCE quantified_atom sequence ) )? ) | {...}? => ( quantified_atom ( ( ( quantified_atom )+ -> ^( SEQUENCE ( quantified_atom )+ ) ) | ( -> ^( quantified_atom ) ) ) ) );
    public final regularExpressionParser.sequence_return sequence() throws RecognitionException {
        regularExpressionParser.sequence_return retval = new regularExpressionParser.sequence_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        regularExpressionParser.quantified_atom_return quantified_atom6 = null;

        regularExpressionParser.sequence_return sequence7 = null;

        regularExpressionParser.quantified_atom_return quantified_atom8 = null;

        regularExpressionParser.quantified_atom_return quantified_atom9 = null;


        RewriteRuleSubtreeStream stream_quantified_atom=new RewriteRuleSubtreeStream(adaptor,"rule quantified_atom");
        RewriteRuleSubtreeStream stream_sequence=new RewriteRuleSubtreeStream(adaptor,"rule sequence");
        try {
            // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:75:2: ({...}? => ( ( quantified_atom -> quantified_atom ) ( sequence -> ^( SEQUENCE quantified_atom sequence ) )? ) | {...}? => ( quantified_atom ( ( ( quantified_atom )+ -> ^( SEQUENCE ( quantified_atom )+ ) ) | ( -> ^( quantified_atom ) ) ) ) )
            int alt6=2;
            alt6 = dfa6.predict(input);
            switch (alt6) {
                case 1 :
                    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:75:4: {...}? => ( ( quantified_atom -> quantified_atom ) ( sequence -> ^( SEQUENCE quantified_atom sequence ) )? )
                    {
                    if ( !((sequencesAsTree)) ) {
                        throw new FailedPredicateException(input, "sequence", "sequencesAsTree");
                    }
                    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:76:2: ( ( quantified_atom -> quantified_atom ) ( sequence -> ^( SEQUENCE quantified_atom sequence ) )? )
                    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:77:3: ( quantified_atom -> quantified_atom ) ( sequence -> ^( SEQUENCE quantified_atom sequence ) )?
                    {
                    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:77:3: ( quantified_atom -> quantified_atom )
                    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:77:5: quantified_atom
                    {
                    pushFollow(FOLLOW_quantified_atom_in_sequence250);
                    quantified_atom6=quantified_atom();

                    state._fsp--;

                    stream_quantified_atom.add(quantified_atom6.getTree());


                    // AST REWRITE
                    // elements: quantified_atom
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 77:21: -> quantified_atom
                    {
                        adaptor.addChild(root_0, stream_quantified_atom.nextTree());

                    }

                    retval.tree = root_0;
                    }

                    // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:78:3: ( sequence -> ^( SEQUENCE quantified_atom sequence ) )?
                    int alt3=2;
                    alt3 = dfa3.predict(input);
                    switch (alt3) {
                        case 1 :
                            // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:78:5: sequence
                            {
                            pushFollow(FOLLOW_sequence_in_sequence262);
                            sequence7=sequence();

                            state._fsp--;

                            stream_sequence.add(sequence7.getTree());


                            // AST REWRITE
                            // elements: sequence, quantified_atom
                            // token labels: 
                            // rule labels: retval
                            // token list labels: 
                            // rule list labels: 
                            // wildcard labels: 
                            retval.tree = root_0;
                            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                            root_0 = (Object)adaptor.nil();
                            // 78:16: -> ^( SEQUENCE quantified_atom sequence )
                            {
                                // /home/matt/dev/droid/droid-src-4.0.0/src/net/domesdaybook/expression/parser/regularExpression.g:78:19: ^( SEQUENCE quantified_atom sequence )
                                {
                                Object root_1 = (Object)adaptor.nil();
                                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(SEQUENCE, "SEQUENCE"), root_1);

                                adaptor.addChild(root_1, stream_quantified_atom.nextTree());
                                adaptor.addChild(root_1, stream_sequence.nextTree());

                                adaptor.addChild(root_0, root_1);
                                }

                            }

                            retval.tree = root_0;
                            }
                            break;

                    }


                    }

